tests/ui/typeck/var_decl_as_loop_body.stderr
error: variable declaration statements are not allowed as the body of a loop (for, while, do while), meaning they must be inside of a block
  --> ROOT/tests/ui/typeck/var_decl_as_loop_body.sol:LL:CC
   |
LL | ...   for (uint256 i = 0; i < 100; ++i) uint256 m_count = i + 1 * 2;
   |                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

error: variable declaration statements are not allowed as the body of a loop (for, while, do while), meaning they must be inside of a block
  --> ROOT/tests/ui/typeck/var_decl_as_loop_body.sol:LL:CC
   |
LL | ...   for (uint256 j = 0; i < 100; ++j) uint256 k = i + j;
   |                                         ^^^^^^^^^^^^^^^^^
   |

error: variable declaration statements are not allowed as the body of a loop (for, while, do while), meaning they must be inside of a block
  --> ROOT/tests/ui/typeck/var_decl_as_loop_body.sol:LL:CC
   |
LL | ...   while (true) uint256 x = 4;
   |                    ^^^^^^^^^^^^^
   |

error: variable declaration statements are not allowed as the body of a loop (for, while, do while), meaning they must be inside of a block
  --> ROOT/tests/ui/typeck/var_decl_as_loop_body.sol:LL:CC
   |
LL | ...   do uint256 x = 4; while (true);
   |          ^^^^^^^^^^^^^
   |

error: aborting due to 4 previous errors

